# Thallium

./: Cargo.toml  LICENCE  README.md  test.rs
.github/workflows/: rust.yml
crates/thallium_derive/: Cargo.toml  README.md
crates/thallium_derive/src/: lib.rs
crates/thallium_ecs/: Cargo.toml  README.md
crates/thallium_ecs/src/: app.rs  commands.rs  component.rs  component_container.rs  entities.rs  lib.rs  query.rs  query_parameters.rs  resource.rs  resource_container.rs  system.rs  system_parameters.rs  system_set.rs  tick.rs
crates/thallium_math/: Cargo.toml  README.md
crates/thallium_math/src/: lib.rs  point3.rs
crates/thallium_renderer/: Cargo.toml  README.md
crates/thallium_renderer/src/: lib.rs
crates/thallium_windowing/: Cargo.toml  README.md
crates/thallium_windowing/src/: lib.rs
src/: app.rs  commands.rs  component.rs  component_container.rs  entities.rs  lib.rs  query.rs  query_parameters.rs  resource.rs  system.rs  system_parameters.rs  system_set.rs
