[package]
name = "thallium"
version = "0.6.0"
edition = "2021"
description = "A basic game engine"
license = "MIT"
repository = "https://github.com/HomelikeBrick42/Thallium"

[workspace]
members = ["crates/*"]

[dependencies]
thallium_ecs = { path = "crates/thallium_ecs", version = "0.6.0" }
thallium_derive = { path = "crates/thallium_derive", version = "0.2.0" }
thallium_renderer = { path = "crates/thallium_renderer", version = "0.1.0" }

[workspace.lints.clippy]
type_complexity = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"
elided_lifetimes_in_paths = "deny"

[lints]
workspace = true
