[package]
name = "thallium"
version = "0.6.5"
edition = "2021"
description = "A basic game engine"
license = "MIT"
repository = "https://github.com/HomelikeBrick42/Thallium"

[workspace]
members = ["crates/*"]

[dependencies]
thallium_ecs = { path = "crates/thallium_ecs", version = "0.6.0", optional = true }
thallium_derive = { path = "crates/thallium_derive", version = "0.2.2", optional = true }

[features]
default = ["ecs", "derive"]
ecs = ["dep:thallium_ecs"]
derive = ["dep:thallium_derive"]

[workspace.lints.clippy]
type_complexity = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"
elided_lifetimes_in_paths = "deny"

[lints]
workspace = true
