[package]
name = "thallium_derive"
version = "0.1.2"
edition = "2021"
description = "The derive macros for the thallium crate"
license = "MIT"
repository = "https://github.com/HomelikeBrick42/Thallium"

[lib]
proc-macro = true

[dependencies]
thallium_ecs = { path = "../thallium_ecs", version = "0.5.0" }
quote = "1.0.35"
syn = "2.0.53"

[lints]
workspace = true
